@@ -6,6 +6,9 @@ function [cls, obs] = removeclasses(ds)
 %   in OBS.
 %
 %   [~, OBS] = REMOVE_CLASSES(DS) returns observations only.
+
+%   This file is part of TimeBox. Copyright 2015-16 Rafael Giusti
+%   Revision 0.1
 cls = ds(:, 1);
 obs = ds(:, 2:end);
 end
